Cleanup some minor code issues